// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components | <Header /> should render correctly with action 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <div
      class="spacer"
    />
    <h1
      class="title"
    >
      Hello World
    </h1>
    <div
      class="action"
    >
      <a
        class="link"
        href="/"
      >
        <button
          class="button"
        >
          Click me
        </button>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components | <Header /> should render correctly without action 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <h1
      class="title"
    >
      Hello World
    </h1>
  </div>
</DocumentFragment>
`;
